<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
tools:context=".GameDetail">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LRtop"
        android:layout_marginTop="20dp">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/menu"
            android:src="@drawable/ic_menu"
            android:padding="10dp"
            android:layout_marginLeft="20dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Search for Game"
            android:textSize="20dp"

            />

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:padding="10dp"
            android:src="@drawable/ic_search_black_24dp" />


    </GridLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stream"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/LRtop">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/preview"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60dp"
            android:textStyle="bold"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/streamcontent"
        android:layout_below="@+id/stream"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/singleRow_RL"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/singleRow_IV"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:padding="10dp"
                android:background="@drawable/radius"
                />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:id="@+id/singleRow_left_top"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:layout_toRightOf="@+id/singleRow_IV"
                android:layout_marginTop="10dp"
                android:background="@drawable/radius"
                />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:id="@+id/singleRow_left_below"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:layout_toRightOf="@+id/singleRow_IV"
                android:layout_below="@+id/singleRow_left_top"
                android:layout_marginTop="20dp"
                android:background="@drawable/radius"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/streamcontent"
        android:layout_marginTop="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/rate_review"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rating"
        android:layout_margin="10dp"
        android:layout_below="@+id/rate">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/rating_bar"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"
            android:padding="10dp"
            android:background="@drawable/radius"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textLeft"
            android:text="@string/rating"
            android:textSize="100sp"
            android:layout_toRightOf="@+id/rating_bar"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:id="@+id/stars"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"
            android:layout_toRightOf="@+id/rating_bar"
            android:layout_below="@+id/textLeft"
            android:background="@drawable/radius"
            />

    </RelativeLayout>



    <GridLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:layout_below="@id/rating"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/downloadBtn"
            android:text="@string/download"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:layout_marginLeft="20dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/moreBtn"
            android:text="@string/more"
            android:textSize="30dp"
            android:background="@drawable/radius"
            android:layout_marginLeft="20dp"
            />


    </GridLayout>



</RelativeLayout>

</ScrollView>